Add logo and attribution to landing page

--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign-Up Form</title>
+    <title>Sign Up Form</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="content-container">
+        <div class="picture">
+            <div class="logo">
+                <img src="img/odin-lined.png" alt="Odin-Logo">
+                <h1>ODIN</h1>
+            </div>
+
+            <div class="pic-asset-recognition">
+                <p>Photo by <a href="https://unsplash.com/@haliewestphoto" target="_blank">Haile West</a> on
+                    <a href="https://unsplash.com/" target="_blank">Unsplash</a>.
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
