--- a/index.html
+++ b/index.html
@@ -20,6 +20,48 @@
                 </p>
             </div>
         </div>
+
+        <form action="" class="sign-up-form">
+            <div class="header-text">
+                <h2>Let's do this!</h2>
+            </div>
+
+            <div class="form-row">
+                <label for="first-name">FIRST NAME</label>
+                <input type="text" id="first-name" name="firstName" placeholder="" required >
+                <span class="error-message"></span>
+            </div>
+
+            <div class="form-row">
+                <label for="last-name">LAST NAME</label>
+                <input type="text" id="last-name" name="lastName" placeholder="" required>
+                <span class="error-message"></span>
+            </div>
+
+            <div class="form-row">
+                <label for="mail">EMAIL</label>
+                <input type="email" id="mail" name="userEmail" placeholder="" required>
+                <span class="error-message"></span>
+            </div>
+
+            <div class="form-row">
+                <label for="phone-number">PHONE NUMBER</label>
+                <input type="tel" id="phone-number" name="phoneNumber" placeholder="" required>
+                <span class="error-message"></span>
+            </div>
+
+            <div class="form-row">
+                <label for="pwd">PASSWORD</label>
+                <input type="password" id="pwd" name="password" required>
+                <span class="error-message">*Passwords do not match</span>
+            </div>
+
+            <div class="form-row">
+                <label for="confirm-pwd">CONFIRM PASSWORD</label>
+                <input type="password" id="confirm-pwd" name="confirmPassword" required>
+                <span class="error-message"></span>
+            </div>
+        </form>
     </div>
 </body>
 </html>
