--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
                 <span class="error-message"></span>
             </div>
         </form>
+
+        <div class="submission-container">
+            <button type="submit" class="sign-up-btn">Create Account</button>
+            <p>Already have an account? <a href="#" class="log-in-link">Log in</a></p>
+        </div>
     </div>
 </body>
 </html>
