Update sign-up form structure and styling

--- a/index.html
+++ b/index.html
@@ -21,51 +21,59 @@
             </div>
         </div>
 
-        <form action="" class="sign-up-form">
-            <div class="header-text">
-                <h2>Let's do this!</h2>
-            </div>
+        <div class="sign-up-container">
+            <header class="sign-up-form-header">
+                <h2>This is not a real online service! You know you need something like this in your life to help
+                    you realize your deepest dreams.<br>Sign up <em>now</em> to get started.</h2>
+                <h2>You <em>know</em> you want to.</h2>
+            </header>
 
-            <div class="form-row">
-                <label for="first-name">FIRST NAME</label>
-                <input type="text" id="first-name" name="firstName" placeholder="" required >
-                <span class="error-message"></span>
-            </div>
+            <form action="" class="sign-up-form">
+                <div class="header-text">
+                    <h2>Let's do this!</h2>
+                </div>
 
-            <div class="form-row">
-                <label for="last-name">LAST NAME</label>
-                <input type="text" id="last-name" name="lastName" placeholder="" required>
-                <span class="error-message"></span>
-            </div>
+                <div class="form-row">
+                    <label for="first-name">FIRST NAME</label>
+                    <input type="text" id="first-name" name="firstName" placeholder="" required >
+                    <span class="error-message"></span>
+                </div>
 
-            <div class="form-row">
-                <label for="mail">EMAIL</label>
-                <input type="email" id="mail" name="userEmail" placeholder="" required>
-                <span class="error-message"></span>
-            </div>
+                <div class="form-row">
+                    <label for="last-name">LAST NAME</label>
+                    <input type="text" id="last-name" name="lastName" placeholder="" required>
+                    <span class="error-message"></span>
+                </div>
 
-            <div class="form-row">
-                <label for="phone-number">PHONE NUMBER</label>
-                <input type="tel" id="phone-number" name="phoneNumber" placeholder="" required>
-                <span class="error-message"></span>
-            </div>
+                <div class="form-row">
+                    <label for="mail">EMAIL</label>
+                    <input type="email" id="mail" name="userEmail" placeholder="" required>
+                    <span class="error-message"></span>
+                </div>
 
-            <div class="form-row">
-                <label for="pwd">PASSWORD</label>
-                <input type="password" id="pwd" name="password" required>
-                <span class="error-message">*Passwords do not match</span>
-            </div>
+                <div class="form-row">
+                    <label for="phone-number">PHONE NUMBER</label>
+                    <input type="tel" id="phone-number" name="phoneNumber" placeholder="" required>
+                    <span class="error-message"></span>
+                </div>
 
-            <div class="form-row">
-                <label for="confirm-pwd">CONFIRM PASSWORD</label>
-                <input type="password" id="confirm-pwd" name="confirmPassword" required>
-                <span class="error-message"></span>
-            </div>
-        </form>
+                <div class="form-row">
+                    <label for="pwd">PASSWORD</label>
+                    <input type="password" id="pwd" name="password" required>
+                    <span class="error-message">*Passwords do not match</span>
+                </div>
 
-        <div class="submission-container">
-            <button type="submit" class="sign-up-btn">Create Account</button>
-            <p>Already have an account? <a href="#" class="log-in-link">Log in</a></p>
+                <div class="form-row">
+                    <label for="confirm-pwd">CONFIRM PASSWORD</label>
+                    <input type="password" id="confirm-pwd" name="confirmPassword" required>
+                    <span class="error-message"></span>
+                </div>
+            </form>
+
+            <div class="submission-container">
+                <button type="submit" class="sign-up-btn">Create Account</button>
+                <p>Already have an account? <a href="#" class="log-in-link">Log in</a></p>
+            </div>
         </div>
     </div>
 </body>
